--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 button {
     margin: 20px;
+    width: 200px;
 }
 
 .header{
@@ -21,5 +22,5 @@ button {
 .column {
   display: flex;
   flex-direction: column;
-  
+
 }
